--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+  background-color: #DEDFE1;
 }
 ol, ul {
 	list-style: none;
